# azure-sphere-arducam-mini-2mp-plus

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  azure-sphere-arducam-mini-2mp-plus.sln  azure-sphere-arducam-mini-2mp-plus.vcxproj  azure-sphere-arducam-mini-2mp-plus.vcxproj.filters  delay_ms.c  delay_ms.h  main.c
Hardware/avnet_mt3620_sk/: sample_hardware.json
Hardware/avnet_mt3620_sk/inc/hw/: sample_hardware.h
Hardware/avnet_mt3620_sk_rev2/: sample_hardware.json
Hardware/avnet_mt3620_sk_rev2/inc/hw/: sample_hardware.h
Hardware/mt3620_rdb/: sample_hardware.json
Hardware/mt3620_rdb/inc/hw/: sample_hardware.h
arducam_driver/: ArduCAM.c  ll.c
arducam_mini_2mp_plus_driver/: ArduCAM.c  ArducamMini2MP.c  ArducamMini2MP.h  ll.c  ov2640_regs.c  ov2640_regs.h
